# investment-monitor

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  design_guidelines.md  package.json  pyproject.toml
.codex/: config.toml  setup.ps1
.github/workflows/: ci.yml
config/: app.example.yaml  fx.example.yaml  instruments.example.yaml  targets.example.yaml
docs/: architecture.md  connection_options.md  dashboard_contract.md  data_classification.md  ibkr_flex_runbook.md  ibkr_gateway_runbook.md  security_model.md  windows_setup.md
docs/decisions/: 0001-localhost-dashboard.md  0002-read-only-ibkr-access.md  0003-flex-plus-gateway-data-strategy.md
public/: index.html
public/assets/: app.js  style.css
public/data/: health.example.json  history.example.json  latest.example.json
scripts/: inspect_db.py  poll_loop.py  poll_once.py  serve_dashboard.py  validate_snapshot.py  verify_dashboard_layout.mjs  verify_dashboard_render.py
src/ibkr_monitor/: __init__.py  __main__.py  cli.py
src/ibkr_monitor/common/: env.py  logging.py  paths.py  redaction.py  validation.py
src/ibkr_monitor/dashboard/: __init__.py  build.py  schema.py  server.py  validate.py
src/ibkr_monitor/ibkr/: __init__.py  client_portal.py  contracts.py  endpoint_policy.py  (+3 more)
tests/: test_endpoint_policy.py
tests/security/: test_forbidden_source_patterns.py
tests/unit/: test_allocation.py  test_client_portal.py  test_dashboard_examples.py  test_dashboard_refresh.py  test_env.py  test_flex.py  test_history.py  test_latest_from_flex.py  test_snapshot_validation.py  test_sqlite_store.py
(+13 files in other folders)
